--- a/var/httpd/htdocs/skins/Agent/slim/css/Core.Header.css
+++ b/var/httpd/htdocs/skins/Agent/slim/css/Core.Header.css
@@ -22,6 +22,10 @@
     background-position: bottom;
 }
 
+#Logo {
+    opacity: 0.3;
+}
+
 /**
  * @subsection  Toolbar
  */
